# tinyServer

./: CMakeLists.txt  LICENSE  clean.sh  run.sh  rungdb.sh  server-config.json
Docs/: 软件规格文档.md
inc/config/: configure.hpp
inc/logger/: logger.hpp
inc/net/: tcpServer.hpp
inc/process/: master_process.hpp
log/: log.txt
src/: main.cpp
src/config/: configure.cpp
src/logger/: logger.cpp
src/net/: tcpServer.cpp
src/process/: master_process.cpp
test/: gtest_config.cpp  gtest_jsonparse.cpp  gtest_tcpserver.cpp  test.json
test/json/: CMakeLists.txt  jsonlib-test.cpp
